--- a/pod-pvc.yaml
+++ b/pod-pvc.yaml
@@ -7,7 +7,7 @@ metadata:
     app: my-app
 spec:
   containers:
-  - name: my-container
+  - name: nginx
     image: nginx
     volumeMounts:
     - name: my-volume
